Liste des capteurs dans la base
